src/objects/ZEB_SupportLevelsCounters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportLevel__c</fullName>
        <label>SupportLevel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ZEB_SupportLevelsCounters</label>
</CustomObject>